# MonsterCalc

./: .gitignore  Monster.icns  MonsterCalc.desktop  MonsterCalc.py  MonsterCalc.spec  README.md  UserGuide.html  app_paths.py  calc.py  demo.txt  engine.py  install_linux.sh  keywords.py  myfuncs.py  pyinstaller_command.txt  pyproject.toml  qt_compat.py  release_notes.txt  syntaxhighlighter.py  toolButtons.py
.github/agents/: my-agent.agent.md  reviewer-agent.agent.md
tests/: conftest.py  test_calc.py  test_engine.py  test_monstercalc.py  test_myfuncs.py  test_widget.py
